@@ -1,5 +1,8 @@
 2010-12-13  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/x86_64/corei/popcount.asm: New file.
+	* mpn/x86_64/corei/hamdist.asm: New file.
+
 	* mpn/x86_64/k10/hamdist.asm: New file.
 
 	* configure.in: Amend last change for lame /bin/sh.
